--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -6,4 +6,10 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <ion-input type='textinput' id='userInput' placeholder='Type here'></ion-input>
+  <p>You receive this message because you signed up to Tier 1, rely STOPTIER1 to stop receiving message</p>
+  <ion-button (click)='send()'>Send</ion-button>
+  <ion-button (click)='get()'>Get</ion-button>
+  <ion-button (click)='text()'>Text</ion-button>
+</ion-content>
