chore: Marketing page UI

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,5 +1,5 @@
 <ion-content style="text-align:center">
-  
+
   <div id="main1" style="display: block">
     <div>
       <ion-button (click)="newlogin()">Login</ion-button>
@@ -13,12 +13,17 @@
     <div>
       <ion-list>
         <ion-item>
-      <ion-input [(ngModel)]="email" type="email" placeholder="Enter Email" required></ion-input>
-      </ion-item>
-      <ion-item>
-      <ion-input [(ngModel)]="password" type="password" placeholder="Enter Password" required></ion-input>
-      <!-- <input type="password" placeholder="Confirm Password" required> -->
-    </ion-item></ion-list></div>
+          Email:
+          <ion-input [(ngModel)]="email" type="email" placeholder="Enter Email" required></ion-input>
+        </ion-item>
+        <ion-item>
+          Password:
+          <ion-input [(ngModel)]="password" type="password" placeholder="Enter Password" required></ion-input>
+          <!-- <input type="password" placeholder="Confirm Password" required> -->
+        </ion-item>
+      </ion-list>
+    </div>
+    <p id='wrongpassword' style="color: red; display:none">* Incorrect Email or Password</p>
     <ion-button (click)="login()">Login</ion-button>
 
 
@@ -55,7 +60,7 @@
     <div>
       <ion-button (click)="register()">Register</ion-button>
     </div>
-</div>
+  </div>
 
 
 </ion-content>
