--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-content>
   <ion-list>
     <ion-item>
-      <ion-icon slot="end" color="medium" name="log-out"></ion-icon>
+      <ion-icon slot="end" color="medium" (click)='logout()' name="log-out"></ion-icon>
     </ion-item>
   </ion-list>
 
@@ -21,13 +21,25 @@
     <ion-list-header>
       <ion-label>Databases</ion-label>
     </ion-list-header>
-    <ion-item href="">
+    <ion-item>
       <ion-icon slot="start" color="medium" name="book"></ion-icon>
       <ion-label>Phone numbers</ion-label>
+      <ion-icon id='phoneicon' slot='end' (click)="showphonelist()" name={{this.phoneicon}}></ion-icon>
+
     </ion-item>
-    <ion-item href="">
+    <ion-card id='phonelist' style="display:none">
+      <ion-list lines='none'>
+        <ion-item>(414)-999-9999</ion-item>
+        <ion-item>(414)-999-9999</ion-item>
+        <ion-item>(414)-999-9999</ion-item>
+        <ion-item>(414)-999-9999</ion-item>
+      </ion-list>
+    </ion-card>
+    <ion-item>
       <ion-icon slot="start" color="medium" name="mail"></ion-icon>
       <ion-label>Emails</ion-label>
+      <ion-icon slot='end' name="arrow-dropright"></ion-icon>
+
     </ion-item>
     <!-- <ion-item href="">
       <ion-icon slot="start" color="medium" name="grid"></ion-icon>
