--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,7 +2,7 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon name="flash"></ion-icon>
+      <ion-icon name="barcode"></ion-icon>
       <ion-label>Dashboard</ion-label>
     </ion-tab-button>
 
