--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -28,19 +28,25 @@
 
     </ion-item>
     <ion-card id='phonelist' style="display:none">
-      <ion-list lines='none'>
-        <ion-item>(414)-999-9999</ion-item>
-        <ion-item>(414)-999-9999</ion-item>
-        <ion-item>(414)-999-9999</ion-item>
-        <ion-item>(414)-999-9999</ion-item>
+      <ion-list>
+        <ion-item *ngFor='let item of this.api.phonenumbers'>
+          {{item}}
+        </ion-item>
       </ion-list>
     </ion-card>
     <ion-item>
       <ion-icon slot="start" color="medium" name="mail"></ion-icon>
       <ion-label>Emails</ion-label>
-      <ion-icon slot='end' name="arrow-dropright"></ion-icon>
+      <ion-icon id='emailicon' slot='end' (click)='showemaillist()' name={{this.emailicon}}></ion-icon>
 
     </ion-item>
+    <ion-card id='emaillist' style="display:none">
+      <ion-list>
+        <ion-item *ngFor='let item of this.api.emails'>
+          {{item}}
+        </ion-item>
+      </ion-list>
+    </ion-card>
     <!-- <ion-item href="">
       <ion-icon slot="start" color="medium" name="grid"></ion-icon>
       <ion-label>Change Your App Layout</ion-label>
