--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -6,7 +6,7 @@
   </ion-list>
 
   <ion-card class="welcome-card">
-    <!-- <ion-img src="/assets/shapes.svg"></ion-img> -->
+    <ion-img src="/assets/thumbnail.png"></ion-img>
     <ion-card-header>
       <ion-card-subtitle>Dashboard</ion-card-subtitle>
       <ion-card-title>Tier 1 Gaming Lounge</ion-card-title>
