--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -10,16 +10,16 @@
   <ion-list>
     <ion-item *ngFor="let item of this.api.scheduledmessage">
       <h3>{{item.message}}</h3>
-      <div style="float:right">
-        <ion-list>
-          <ion-item *ngIf='item.text === true'>Text</ion-item>
-          <ion-item *ngIf='item.email === true'>email</ion-item>
-          <ion-item *ngIf='item.push === true'>Push</ion-item>
-          <ion-item>{{item.time}}</ion-item>
-          <ion-item>{{item.date}}</ion-item>
-          <ion-item>{{item.frequency}}</ion-item>
-        </ion-list>
-      </div>
+      <!-- <ion-list slot='end'>
+        <ion-item *ngIf='item.text === true'>Text</ion-item>
+        <ion-item *ngIf='item.email === true'>Email</ion-item>
+        <ion-item *ngIf='item.push === true'>Push</ion-item>
+        <ion-item>{{item.time}}</ion-item>
+        <ion-item>{{item.date}}</ion-item>
+        <ion-item>{{item.frequency}}</ion-item>
+      </ion-list> -->
+      <ion-button (click)='showdetails(item)' slot='end'>Details</ion-button>
+      <ion-icon (click)='confirmdelete(item)' slot='end' name="trash"></ion-icon>
     </ion-item>
   </ion-list>
 
