--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -7,10 +7,10 @@
 </ion-header>
 
 <ion-content padding='10px'>
-  <ion-searchbar type="text" maxlength="18" placeholder="Search" debounce="0" [(ngModel)]="searchText"
-    (ionChange)="ionChange(searchText)"></ion-searchbar>
-  <div><input required type='textinput' id='userInput' placeholder='Type here'
-      style='width: 340px; height: 120px; border: 1px solid #999999; padding: 5px;'>
+  <div>
+    <ion-input type="text" maxlength="18" placeholder="Type your message" debounce="0" [(ngModel)]="searchText"
+      (ionChange)="ionChange(searchText)" id='userInput'
+      style=' height: 120px; border: 1px solid #999999; padding: 5px;'></ion-input>
   </div>
   <br>
   <ion-list>
