--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,10 +1,10 @@
 <ion-header>
     <ion-item>
       <ion-label style="padding-left: 35%;font-size: 1.5rem;
-      font-weight: 200;">
+      font-weight: 200; padding-top: 15px;">
         Marketing
       </ion-label> 
-      <ion-icon slot="end" color="medium" (click)='logout()' name="log-out"></ion-icon>
+      <ion-icon slot="end" color="medium" (click)='logout()' name="log-out" style="padding-top: 15px;"></ion-icon>
     </ion-item>
 </ion-header>
 
